--- a/library.properties
+++ b/library.properties
@@ -7,4 +7,4 @@ paragraph=This library is used to control the macro pad (custom keyboard).
 category=Signal Input/Output
 url=https://github.com/mmz-bin/Arduino_MacroPad
 architectures=*
-includes=OneShot.h
+includes=MacroPad.h
